@@ -295,3 +295,12 @@
 * DB model `Credential` and migration `20250810_05_credentials.py`.
 * Basic `/credentials` list/create API.
 * `GET /connectors/definitions` now enumerates Onyx connector sources.
+
+## 2025-08-10 (0.12.44)
+### Added
+* Security: simple Fernet helpers (`backend/security/crypto.py`) and encrypt credentials at creation in `/credentials` API (dev key fallback; replace in prod).
+
+## 2025-08-10 (0.12.45)
+### Added
+* Web: Connectors page to list credentials, start OAuth flows, and add static credentials. Linked in TopNav.
+* Backend: OAuth endpoints now support state storage (Redis or in-memory) and post-callback redirect to UI with `credential_id`.
